--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@theme{
+    --color-primary-50: #ecf7ff;
+    --color-primary-100: #d5ebff;
+    --color-primary-200: #b5ddff;
+    --color-primary-300: #82caff;
+    --color-primary-400: #47aaff;
+    --color-primary-500: #1c85ff;
+    --color-primary-600: #0562ff;
+    --color-primary-700: #004af7;
+    --color-primary-800: #063ac0;
+    --color-primary-900: #0c379c;
+    --color-primary-950: #0d245e;
+}
